--- a/style.css
+++ b/style.css
@@ -56,28 +56,29 @@ img {
 @media screen and (min-width: 376px) {
     .mainContainer {
         background-color: hsl(0, 0%, 100%);
-        height: 350px;
-        width: 220px;
+        height: 490px;
+        width: 300px;
     }
     .textContainer1 {
-        margin: 0px 15px;
+        margin: 15px 20px;
         /* padding: 0px 7px; */
-        font-size: 15px;
+        font-size: 21px;
         font-weight: 700;
         color: hsl(218, 44%, 22%);
         font-family: 'Outfit', sans-serif;
     }
     .textContainer2 {
-        margin: 18px;
-        /* padding: 0px 7px; */
-        font-size: 12px;
+        margin: 10px 25px;
+        padding: 0 0 20px 0;
+        font-size: 15px;
         color: hsl(220, 15%, 55%);
         font-family: 'Outfit', sans-serif;
     }
     .attribution {
-        height: 10%;
+        position: absolute;
+        right: 0;
+        bottom: 0;
         /* background-color: rgb(24, 189, 73); */
-        margin: 15px;
         font-family: 'Outfit', sans-serif;
     }
 }
